<resources>
    <string name="app_name">Tutor Searcher</string>
    <string name="welcome_message">Welcome to Tutor Searcher</string>
    <string name="tutor">Tutor</string>
    <string name="tutee">Tutee</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_phone_number">Phone number</string>
    <string name="prompt_bio">Bio</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account_message">Don\'t have an account?</string>
    <string name="prompt_user_to_register">Register for account now.</string>
    <string name="title_activity_availability">AvailabilityActivity</string>
    <string-array name="class_array">
        <item>CSCI 102</item>
        <item>CSCI 103</item>
        <item>CSCI 104</item>
        <item>CSCI 109</item>
        <item>CSCI 170</item>
        <item>CSCI 201</item>
        <item>CSCI 270</item>
        <item>CSCI 310</item>
        <item>CSCI 356</item>
        <item>CSCI 360</item>
        <item>CSCI 401</item>
    </string-array>
    <string name="title_activity_home">Welcome to Tutor Searcher</string>
    <string name="submit">Submit</string>
    <string name="title_activity_search_tutor">Search for a Tutor</string>
    <string name="title_activity_tabbed_availability">TabbedAvailabilityActivity</string>
    <string name="logout">Logout</string>
    <string name="search_for_tutor">Search for a Tutor</string>
    <string name="update_profile">Update Profile</string>
    <string name="view_requests">View Requests</string>


    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling_home">Welcome to Tutor Searcher</string>
    <string name="large_text">
        "Insert our search activity here"
    </string>
    <string name="action_settings">Settings</string>

    <string name="submit_rating_button">Submit Rating</string>
    <string name="title_activity_rating">Rate your tutor</string>

</resources>
