<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ScrollingHomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/home_navigator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/background_light"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context=".HomeActivity"
                tools:showIn="@layout/activity_home">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="96dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/cardinal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/search_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:drawableLeft="@android:drawable/ic_search_category_default"
                    android:onClick="openSearchActivity"
                    android:text="@string/search_for_tutor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/cardinal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <Button
                    android:id="@+id/accepted_requests_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="139dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="139dp"
                    android:layout_marginRight="24dp"
                    android:drawableLeft="@drawable/check_icon"
                    android:drawablePadding="12dp"
                    android:onClick="openAcceptedRequestActivity"
                    android:text="View Accepted Requests"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/cardinal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.49"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view_requests_button" />

                <Button
                    android:id="@+id/view_requests_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="139dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="139dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginBottom="64dp"
                    android:drawableLeft="@drawable/bookiconsmall"
                    android:drawablePadding="12dp"
                    android:onClick="openViewRequestActivity"
                    android:text="@string/view_requests"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/cardinal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/update_profile_button"
                    app:layout_constraintVertical_bias="0.0" />

                <Button
                    android:id="@+id/update_profile_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:drawableLeft="@drawable/profileiconsmall"
                    android:drawablePadding="4dp"
                    android:onClick="openUpdateProfileActivity"
                    android:text="@string/update_profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/cardinal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/search_button" />

                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="openMainActivity"
                    android:text="@string/logout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/accepted_requests_button"></View>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:visibility="invisible"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_scrolling_home" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>