<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile">

    <TextView
        android:id="@+id/UpdateProfileText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="Update Profile"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeButton" />

    <LinearLayout
        android:id="@+id/firstname_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/UpdateProfileText">

        <TextView
            android:id="@+id/firstNameLabel"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_first_name" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:inputType="textPersonName"
            android:text="Name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lastname_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstname_row">

        <TextView
            android:id="@+id/lastNameLabel"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_last_name" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:inputType="textPersonName"
            android:text="Name" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/phonenumber_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastname_row">

        <TextView
            android:id="@+id/phoneNumberLabel"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_phone_number" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:inputType="phone"
            android:text="Name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phonenumber_row">

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="New Password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bio_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_row"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="onUpdateClick"
        android:text="Update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bio_row" />

    <Button
        android:id="@+id/accepted_requests_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="257dp"
        android:layout_height="50dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:drawableLeft="@drawable/calendar_icon"
        android:drawablePadding="12dp"
        android:onClick="onUpdateAvailabilityClick"
        android:text="Update Availability"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/update_classses_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="255dp"
        android:layout_height="51dp"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="96dp"
        android:drawableLeft="@drawable/classes_icon"
        android:drawablePadding="12dp"
        android:onClick="onUpdateClassesClick"
        android:text="Update Classes"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accepted_requests_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/update_bio_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="234dp"
        android:layout_height="46dp"
        android:layout_marginStart="139dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:drawablePadding="12dp"
        android:onClick="onUpdateBioClick"
        android:text="Update Bio"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_classses_button" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="backToHomeClick"
        android:text="Back to Home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>